// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BearerProvider allow custom integration host 1`] = `
<React.Fragment>
  <Unknown
    clientId="abc123"
    intHost="https://int.bearer.sh/v2/"
  />
  <Context.Provider
    value={
      Object {
        "handlePropUpdates": [Function],
        "state": Object {},
      }
    }
  />
</React.Fragment>
`;

exports[`BearerProvider default state is sent to context components 1`] = `
Array [
  "{
  \\"setup-id\\": \\"123\\"
}",
  <button
    onClick={[Function]}
  />,
]
`;

exports[`BearerProvider renders basic provider tag 1`] = `
<React.Fragment>
  <Unknown
    clientId="abc123"
  />
  <Context.Provider
    value={
      Object {
        "handlePropUpdates": [Function],
        "state": Object {},
      }
    }
  />
</React.Fragment>
`;
